2005-08-02  Adele Peterson  <adele@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-07-29  Geoffrey Garen  <ggaren@apple.com>
        
        - fixed:
        <rdar://problem/3461547> can't use document.writeln() on windows opened via window.open("about:blank") in same function
        <rdar://problem/3725977> A_WINDOW.document.write() content overwritten when first parameter to window.open is provided
        <rdar://problem/4101498> SAP: window.write in same call chain as window.open fails to write if URL parameter is provided
        <rdar://problem/4179028> document.write in same function as window.open fails to write new content (4056)
        http://bugzilla.opendarwin.org/show_bug.cgi?id=4056 document.write in same function as window.open fails to write new content

        Reviewed by darin.

        Test cases added:
        * manual-tests/resources/write-after-open-popup.html: Added.

        * khtml/khtml_part.cpp:
        (KHTMLPart::didExplicitOpen): now cancels any pending redirection

2005-07-29  John Sullivan  <sullivan@apple.com>
 
         Reviewed by Dave Hyatt.


2005-08-02  Adele Peterson  <adele@apple.com>

        Merged fix from TOT to Safari-2-0-branch

    2005-07-14  Justin Garcia  <justin.garcia@apple.com>

        Patch by Anders Carlsson and justin

        Reviewed by mjs
        
        Fixes the following related bugs: 
        <http://bugzilla.opendarwin.org/show_bug.cgi?id=3298> insertRow generates DOM Exception if TABLE does not possess a TBODY
        <rdar://problem/4045213> insertRow fails on a <table> that has no <tbody> but does have other children in the DOM
        <rdar://problem/3609576> insertRow() on table object containing any characters but no TR & TD elements fails (3476)
        
        Does a better job of maintaining the firstBody variable so that it's not invalidated on .innerHTML = ""
        Better check for when to add an implicit tbody to hold the inserted row.
