@@ -1,85 +1,113 @@
-.objc_class_name_DOMImplementation
-.objc_class_name_DOMNode
-.objc_class_name_DOMNodeFilter
-.objc_class_name_DOMNodeList
-.objc_class_name_DOMNamedNodeMap
-.objc_class_name_DOMCharacterData
+.objc_class_name_DOMAbstractView
 .objc_class_name_DOMAttr
-.objc_class_name_DOMElement
-.objc_class_name_DOMText
-.objc_class_name_DOMComment
 .objc_class_name_DOMCDATASection
+.objc_class_name_DOMCSSCharsetRule
+.objc_class_name_DOMCSSFontFaceRule
+.objc_class_name_DOMCSSImportRule
+.objc_class_name_DOMCSSMediaRule
+.objc_class_name_DOMCSSPageRule
+.objc_class_name_DOMCSSPrimitiveValue
+.objc_class_name_DOMCSSRule
+.objc_class_name_DOMCSSRuleList
+.objc_class_name_DOMCSSStyleDeclaration
+.objc_class_name_DOMCSSStyleRule
+.objc_class_name_DOMCSSStyleSheet
+.objc_class_name_DOMCSSUnknownRule
+.objc_class_name_DOMCSSValue
+.objc_class_name_DOMCSSValueList
+.objc_class_name_DOMCharacterData
+.objc_class_name_DOMComment
+.objc_class_name_DOMCounter
+.objc_class_name_DOMDocument
+.objc_class_name_DOMDocumentFragment
 .objc_class_name_DOMDocumentType
-.objc_class_name_DOMNotation
+.objc_class_name_DOMElement
 .objc_class_name_DOMEntity
 .objc_class_name_DOMEntityReference
-.objc_class_name_DOMProcessingInstruction
-.objc_class_name_DOMDocumentFragment
-.objc_class_name_DOMDocument
-.objc_class_name_DOMRange
-.objc_class_name_DOMHTMLCollection
-.objc_class_name_DOMHTMLDocument
-.objc_class_name_DOMHTMLElement
-.objc_class_name_DOMHTMLHtmlElement
-.objc_class_name_DOMHTMLHeadElement
-.objc_class_name_DOMHTMLTitleElement
-.objc_class_name_DOMHTMLMetaElement
-.objc_class_name_DOMHTMLBaseElement
-.objc_class_name_DOMHTMLIsIndexElement
-.objc_class_name_DOMHTMLStyleElement
-.objc_class_name_DOMHTMLFormElement
-.objc_class_name_DOMHTMLSelectElement
-.objc_class_name_DOMHTMLOptGroupElement
-.objc_class_name_DOMHTMLOptionElement
-.objc_class_name_DOMHTMLTextAreaElement
-.objc_class_name_DOMHTMLButtonElement
-.objc_class_name_DOMHTMLLabelElement
-.objc_class_name_DOMHTMLFieldSetElement
-.objc_class_name_DOMHTMLLegendElement
-.objc_class_name_DOMHTMLUListElement
-.objc_class_name_DOMHTMLOListElement
-.objc_class_name_DOMHTMLDListElement
-.objc_class_name_DOMHTMLDirectoryElement
-.objc_class_name_DOMHTMLMenuElement
-.objc_class_name_DOMHTMLLIElement
-.objc_class_name_DOMHTMLDivElement
-.objc_class_name_DOMHTMLParagraphElement
-.objc_class_name_DOMHTMLHeadingElement
-.objc_class_name_DOMHTMLQuoteElement
-.objc_class_name_DOMHTMLPreElement
-.objc_class_name_DOMHTMLBRElement
-.objc_class_name_DOMHTMLBaseFontElement
-.objc_class_name_DOMHTMLFontElement
-.objc_class_name_DOMHTMLHRElement
-.objc_class_name_DOMHTMLModElement
+.objc_class_name_DOMEvent
 .objc_class_name_DOMHTMLAnchorElement
 .objc_class_name_DOMHTMLAppletElement
-.objc_class_name_DOMHTMLMapElement
-.objc_class_name_DOMHTMLTableCaptionElement
-.objc_class_name_DOMHTMLTableColElement
-.objc_class_name_DOMHTMLTableSectionElement
-.objc_class_name_DOMHTMLTableRowElement
-.objc_class_name_DOMHTMLFrameSetElement
-.objc_class_name_DOMHTMLFrameElement
-.objc_class_name_DOMHTMLIFrameElement
-.objc_class_name_DOMHTMLBodyElement
-.objc_class_name_DOMHTMLEmbedElement
-.objc_class_name_DOMHTMLInputElement
-.objc_class_name_DOMHTMLLinkElement
-.objc_class_name_DOMHTMLObjectElement
-.objc_class_name_DOMHTMLParamElement
-.objc_class_name_DOMHTMLScriptElement
-.objc_class_name_DOMHTMLTableCellElement
-.objc_class_name_DOMHTMLTableElement
-.objc_class_name_DOMHTMLAnchorElement
 .objc_class_name_DOMHTMLAreaElement
+.objc_class_name_DOMHTMLBRElement
+.objc_class_name_DOMHTMLBaseElement
+.objc_class_name_DOMHTMLBaseFontElement
+.objc_class_name_DOMHTMLBodyElement
+.objc_class_name_DOMHTMLButtonElement
+.objc_class_name_DOMHTMLCollection
+.objc_class_name_DOMHTMLDListElement
+.objc_class_name_DOMHTMLDirectoryElement
+.objc_class_name_DOMHTMLDivElement
+.objc_class_name_DOMHTMLDocument
+.objc_class_name_DOMHTMLElement
+.objc_class_name_DOMHTMLEmbedElement
+.objc_class_name_DOMHTMLFieldSetElement
+.objc_class_name_DOMHTMLFontElement
+.objc_class_name_DOMHTMLFormElement
+.objc_class_name_DOMHTMLFrameElement
+.objc_class_name_DOMHTMLFrameSetElement
+.objc_class_name_DOMHTMLHRElement
+.objc_class_name_DOMHTMLHeadElement
+.objc_class_name_DOMHTMLHeadingElement
+.objc_class_name_DOMHTMLHtmlElement
+.objc_class_name_DOMHTMLIFrameElement
 .objc_class_name_DOMHTMLImageElement
+.objc_class_name_DOMHTMLInputElement
+.objc_class_name_DOMHTMLIsIndexElement
+.objc_class_name_DOMHTMLLIElement
+.objc_class_name_DOMHTMLLabelElement
+.objc_class_name_DOMHTMLLegendElement
+.objc_class_name_DOMHTMLLinkElement
+.objc_class_name_DOMHTMLMapElement
+.objc_class_name_DOMHTMLMenuElement
+.objc_class_name_DOMHTMLMetaElement
+.objc_class_name_DOMHTMLModElement
+.objc_class_name_DOMHTMLOListElement
+.objc_class_name_DOMHTMLObjectElement
+.objc_class_name_DOMHTMLOptGroupElement
+.objc_class_name_DOMHTMLOptionElement
+.objc_class_name_DOMHTMLOptionsCollection
+.objc_class_name_DOMHTMLParagraphElement
+.objc_class_name_DOMHTMLParamElement
+.objc_class_name_DOMHTMLPreElement
+.objc_class_name_DOMHTMLQuoteElement
+.objc_class_name_DOMHTMLScriptElement
+.objc_class_name_DOMHTMLSelectElement
+.objc_class_name_DOMHTMLStyleElement
+.objc_class_name_DOMHTMLTableCaptionElement
+.objc_class_name_DOMHTMLTableCellElement
+.objc_class_name_DOMHTMLTableColElement
+.objc_class_name_DOMHTMLTableElement
+.objc_class_name_DOMHTMLTableRowElement
+.objc_class_name_DOMHTMLTableSectionElement
+.objc_class_name_DOMHTMLTextAreaElement
+.objc_class_name_DOMHTMLTitleElement
+.objc_class_name_DOMHTMLUListElement
+.objc_class_name_DOMImplementation
+.objc_class_name_DOMMediaList
+.objc_class_name_DOMMouseEvent
+.objc_class_name_DOMMutationEvent
+.objc_class_name_DOMNamedNodeMap
+.objc_class_name_DOMNode
+.objc_class_name_DOMNodeFilter
+.objc_class_name_DOMNodeIterator
+.objc_class_name_DOMNodeList
+.objc_class_name_DOMNotation
+.objc_class_name_DOMObject
+.objc_class_name_DOMProcessingInstruction
+.objc_class_name_DOMRGBColor
+.objc_class_name_DOMRange
+.objc_class_name_DOMRect
+.objc_class_name_DOMStyleSheet
+.objc_class_name_DOMStyleSheetList
+.objc_class_name_DOMText
+.objc_class_name_DOMTreeWalker
+.objc_class_name_DOMUIEvent
 .objc_class_name_WebCoreBridge
 .objc_class_name_WebCoreCache
 .objc_class_name_WebCoreCookieAdapter
 .objc_class_name_WebCoreEncodings
-.objc_class_name_WebCoreHistory
 .objc_class_name_WebCoreGraphicsBridge
+.objc_class_name_WebCoreHistory
 .objc_class_name_WebCoreImageRendererFactory
 .objc_class_name_WebCoreJavaScript
 .objc_class_name_WebCoreKeyGenerator
